- cleaned up asynctask related code (there's a potential bug/crash if multiple calls to getCities is made (too many updates on UI layer)) - added "add city" functionality to app and backend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string name="app_name">ListOfCities</string>
-    <string name="action_add_city">Add City</string>
+    <string name="action_add_city_text">Add City</string>
+    <string name="progress_dialog_loading_text">Loading...</string>
+    <string name="enter_city_text">Enter city name: </string>
 
 </resources>
